server and docs somehow done again.
